--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,18 @@ version: '3.9'
 
 # Dev
 services:
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   volumes:
-  #     - ./frontend/react:/app/react
-  #     - /app/react/node_modules
-  #   ports:
-  #     - "443:443"
-  #     - "80:80"
-  #   environment:
-  #     - NODE_ENV=development
-  #   networks:
-  #     - default_network
+  frontend:
+    build:
+      context: ./frontend
+    volumes:
+      - ./frontend/react:/app/react
+      - /app/react/node_modules
+    ports:
+      - "3000:3000"
+    environment:
+      - NODE_ENV=development
+    networks:
+      - default_network
 
   backend:
     build:
