--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ FROM node:22-alpine3.19
 
 WORKDIR /app
 
-COPY react/package.json ./react/
+COPY react/package.json react/package-lock.json ./react/
 WORKDIR /app/react
 RUN npm install
 
